--- a/sequence1b/index.html
+++ b/sequence1b/index.html
@@ -22,11 +22,11 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>In progress</h2>
+<h2>8-Puzzle</h2>
 <ul>
 
 <li><strong>High Concept:</strong>
-Card game. 
+Puzzle game. 
 </li>
 
 <li><strong>Theme:</strong>
@@ -34,7 +34,7 @@ Puzzle.
 </li>
 
 <li><strong>Mandated Variety:</strong>
-Input: Mouse. Play style: Single player versus computer.
+Input: Mouse. Play style: Single player.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
@@ -42,8 +42,10 @@ Have fun?
 </li>
 
 <li><strong>Gameplay:</strong>
-In progress. At this point, just display 52 cards in random order.
-
+This is a simple game played on a 3 x 3 grid, containing 9 squares. One of the squares is empty. 
+Every other square has one number from 2 to 9. The objective is to rearrange the squares in order using the empty square.
+Depends on the empty square position, the player can slide an adjacent square next to it (left, right, above or below) 
+into the empty square.
 </li>
 
 <li><strong>Target Audience:</strong>
@@ -55,7 +57,7 @@ All.
 </li>
 
 <li><strong>Strategies:</strong>
-Random.
+
 </li>
 
 <li><strong>Prototype Assets:</strong>
