--- a/sequence1b/index.html
+++ b/sequence1b/index.html
@@ -44,8 +44,7 @@ Have fun?
 <li><strong>Gameplay:</strong>
 This is a simple game played on a 3 x 3 grid, containing 9 squares. One of the squares is empty. 
 Every other square has one number from 2 to 9. The objective is to rearrange the squares in order using the empty square.
-Depends on the empty square position, the player can slide an adjacent square next to it (left, right, above or below) 
-into the empty square.
+Depends on the empty square position, the player can click an adjacent square next to it (left, right, above or below) to switch positions of the empty square and the adjacent square.
 </li>
 
 <li><strong>Target Audience:</strong>
@@ -58,6 +57,9 @@ All.
 
 <li><strong>Strategies:</strong>
 
+</li>
+<li><strong>Originality:</strong>
+Squares are playing cards. Can move a square by just clicking on it, no need to slide it.
 </li>
 
 <li><strong>Prototype Assets:</strong>
