--- a/sequence1b/index.html
+++ b/sequence1b/index.html
@@ -43,8 +43,8 @@ Have fun?
 
 <li><strong>Gameplay:</strong>
 This is a simple game played on a 3 x 3 grid, containing 9 squares. One of the squares is empty. 
-Every other square has one number from 2 to 9. The objective is to rearrange the squares in order using the empty square.
-Depends on the empty square position, the player can click an adjacent square next to it (left, right, above or below) to switch positions of the empty square and the adjacent square.
+Every other square has one number from 2 to 9. The objective is to rearrange the squares in order, using the empty square, using as few moves as possible.
+Depends on the empty square's position, the player can click an adjacent square next to it (left, right, above or below) to switch positions of the empty square and the adjacent square. The playable puzzle is on the left, the goal is on the right.
 </li>
 
 <li><strong>Target Audience:</strong>
@@ -52,7 +52,7 @@ All.
 </li>
 
 <li><strong>Play Time:</strong>
-? minute.
+3-5 minute.
 </li>
 
 <li><strong>Strategies:</strong>
@@ -67,7 +67,8 @@ Borrowed from the internet. Sources: google.
 <ul>
 <li>Music: <a href="http://www.soundclick.com/bands/default.cfm?bandID=1053765">Casino</a></li>
 <li>Sprite Sheet: <a href="https://www.google.com/search?q=card+sprite+sheet&source=lnms&tbm=isch&sa=X&ved=0ahUKEwja59_Ny6PaAhWOdN8KHVIuCZcQ_AUICigB&biw=1349&bih=736#imgrc=-k26md5IoR0-gM:">Cards sheet</a></li>
-<li>Background: <a href="https://www.google.com/search?q=casino+table+background&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjAz6yCyKPaAhVqU98KHQ_zBocQ_AUICigB&biw=1349&bih=736#imgrc=ZDoCPUSQhE-n2M:">Card Table</a></li>
+<li>Background: <a href="https://www.google.com/search?q=nice+backgrounds&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjFw4qwgLraAhVPnlkKHdbGAX0Q_AUoAXoECAAQAw&biw=1148&bih=692&dpr=2#imgdii=vL2_8xbl7cH5aM:&imgrc=MwqCdUxnSRu1AM:">Wood</a></li>
+<li>Restart Button: <a href="https://www.google.com/search?q=restart+button&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjhuteegLraAhVHj1kKHd7zDh8Q_AUoAXoECAAQAw&biw=1148&bih=736#imgrc=PHe9ACciyNFvhM:">Restart Button</a></li>
 
 </ul>
 </li>
