--- a/sequence1b/index.html
+++ b/sequence1b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Dgital 7</title>
+    <title>Digital 7</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
