--- a/sequence2a/index.html
+++ b/sequence2a/index.html
@@ -9,7 +9,8 @@
 	<script src="js/Boot.js"></script>
 	<script src="js/Preloader.js"></script>
 	<script src="js/MainMenu.js"></script>
-	<script src="js/Game.js"></script>
+	<script src="js/Easy.js"></script>
+	<script src="js/Hard.js"></script>
 	<script src="js/Exit.js"></script>
 	<script src="js/Score.js"></script>
 	<!-- main.js must come last since it references the other ones. -->
@@ -80,14 +81,17 @@ What was the easiest or hardest part of making it. Hard part: graphics and compu
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Borrowed from the internet and the template. Sources: google.
+Borrowed from the internet and the template. Sources: google.  Code for 'Exit' state copied from the template.  
 <ul>
 	<li>Buttons: created with online tools from <a href="http://buttonoptimizer.com/#">Free Button Creator</a></li>
 	<li>Music: <a href="http://www.soundclick.com/bands/default.cfm?bandID=1053765">Casino</a></li>
 	<li>Sprite Sheet: <a href="http://24.media.tumblr.com/tumblr_md1a8v4nzF1qgd7tso1_500.gif">Dog</a></li>
-	<li>Game Background: <a href="https://www.google.com/search?q=light+background&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjcttjj5dnaAhUmmuAKHU2vDHsQ_AUoAXoECAAQAw&biw=1338&bih=693#imgrc=yRxzFfccAqtOvM:">Background</a></li>
-	<li>Menu Background: <a href="https://www.google.com/search?biw=1338&bih=737&tbm=isch&sa=1&ei=LXfiWqTUI7Lp_QbB2paQCA&q=cartoon+dog+backgrounds&oq=cartoon+dog+backgrounds&gs_l=psy-ab.3..0j0i5i30k1.75018.77678.0.77995.8.8.0.0.0.0.84.577.8.8.0....0...1c.1.64.psy-ab..0.8.576...0i13k1j0i7i30k1j0i7i5i30k1j0i8i7i30k1.0.9rm8bdevoz0#imgdii=2CcgOZdylOT6iM:&imgrc=vppGeoZcRzI4jM:">Bolt the Dog</a></li>
-	<li>Boot Background: <a href="https://www.google.com/search?biw=1117&bih=692&tbm=isch&sa=1&ei=plDSWquLH43q_Ab-8bX4CA&q=nice+backgrounds+800x600&oq=nice+backgrounds+800x600&gs_l=psy-ab.3...86333.88819.0.89038.8.8.0.0.0.0.82.539.8.8.0....0...1c.1.64.psy-ab..0.1.81...0j0i67k1.0.SbXPPtasSD0#imgrc=VD4CBBKffF85-M:">Ocean</a></li>
+	<li>Game Background: <a href="https://wallpaperscraft.com/image/surface_network_light_background_texture_50497_1920x1200.jpg">Background</a></li>
+	<li>Menu Background: <a href="https://img00.deviantart.net/350c/i/2009/095/a/8/bolt_wallpaper_by_stickman_art.jpg">Bolt the Dog</a></li>
+	<li>Board: <a href="https://vt-s3-files.s3.amazonaws.com/uploads/problem_question_image/image/13797/1.png">Diagonal Line</a></li>
+	<li>Purple chess piece: <a href="http://clipground.com/images/color-circle-clipart-13.jpg">Purple Circle</a></li>
+	<li>Green chess piece: <a href="http://weclipart.com/gimg/43DA6DA544BFE302/colored-circle-14249-large.png">Green Circle</a></li>
+	<li>Boot Background: <a href="https://i.pinimg.com/originals/ab/b7/ee/abb7ee827dbbe98178de8b3edf9b9c53.jpg">Ocean</a></li>
 </ul>
 </li>
 <li><strong>Prototype Closest Other Game:</strong>
