--- a/sequence2a/index.html
+++ b/sequence2a/index.html
@@ -48,15 +48,17 @@ Input: Mouse. Play style: Single player vs. Computer.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-Have fun. The goal of the game is to avoid moving across the dog, or running out of time, and to press your opponent into one of those 2 conditions
+Have fun. The goal of the game is to corner your opponent.  A player wins if the opponent is out of moves (cannot get to the open position without crossing the dog).
 </li>
 
 <li><strong>Gameplay:</strong>
-Each side will have 2 pieces, on a simple board. Computer's pieces are purple.  Player's pieces are green.  Player's pieces are at bottom.  Player's left piece goes first.  One piece can be moved per turn.
-Chess pieces can be moved horizontally, vertically, or diagonally to an empty position.
-Player start with a time limit of 8 seconds to move.  Each successful move earns a point.  As the score goes up, the time limit will gradually goes down to 1 second. 
-
-The player or computer loses when he/she has no choice but to move a piece across the dog, or time is up.
+Each side will have 2 pieces, on a simple board. There is exactly 1 open position at any given time. Computer's pieces are purple and on top of board, player's are green and at bottom.  Player goes first.  Only 1 piece can be moved per turn. 
+<br>If the dog is on the right side of the board, player's will not be able to move the right piece on the 1st move, since that would instantly make computer out of moves.  Similarly, if the dog is on the left side of the board, player's won't be able to move the left piece on the 1st move. 
+<br>Chess pieces can be moved horizontally, vertically, or diagonally to the open position.
+Player starts with a time limit of 8 seconds to move.  Each successful move earns a point.  As the score goes up, the time limit will gradually goes down to 1 second. 
+<br>The player loses when he/she is out of moves, or time is up before he/she can make a move.
+<br>In the easy mode, the dog will remain in its initial position throughout the game. The computer will randomly pick 1 of the 2 pieces to move to the open position, it does not calculate the best move. The move may lead the computer to a loss.
+<br>In the hard mode, the dog will randomly move to different positions throughout the game. A dog's move will not put the player in an "out of moves" situation.  The computer will also calculate which piece is best to move.  This mode is not implemented yet.  The easy mode is used in its place.
 
 </li>
 
@@ -69,10 +71,10 @@ All.
 </li>
 
 <li><strong>Strategies:</strong>
-Try to press both pieces of your opponent into 1 side of the board, and try to avoid being pressed to 1 side.
+Try to press both pieces of your opponent into 1 side of the board, and try to avoid being pressed to 1 side.  Fast reaction is needed as the game advances, since the time limit will eventually reaches 1 second.
 </li>
 <li><strong>Originality:</strong>
-The game strategy. Can move a piece by just clicking on it, no need to slide it. Decreasing time with increasing score.
+The game strategy. Can move a piece by just clicking on it, no need to slide it. Decreasing time with increasing score. Click on the dog to hear it barks.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
@@ -85,6 +87,7 @@ Borrowed from the internet and the template. Sources: google.  Code for 'Exit' s
 <ul>
 	<li>Buttons: created with online tools from <a href="http://buttonoptimizer.com/#">Free Button Creator</a></li>
 	<li>Music: <a href="http://www.soundclick.com/bands/default.cfm?bandID=1053765">Casino</a></li>
+	<li>Dog's bark: <a href="http://soundbible.com/grab.php?id=70&type=mp3">Woof</a></li>
 	<li>Sprite Sheet: <a href="http://24.media.tumblr.com/tumblr_md1a8v4nzF1qgd7tso1_500.gif">Dog</a></li>
 	<li>Game Background: <a href="https://wallpaperscraft.com/image/surface_network_light_background_texture_50497_1920x1200.jpg">Background</a></li>
 	<li>Menu Background: <a href="https://img00.deviantart.net/350c/i/2009/095/a/8/bolt_wallpaper_by_stickman_art.jpg">Bolt the Dog</a></li>
