--- a/sequence2a/index.html
+++ b/sequence2a/index.html
@@ -36,7 +36,7 @@ body
 <ul>
 
 <li><strong>High Concept:</strong>
-2-player chess type game. Chess type game.
+2-player chess type game.
 </li>
 
 <li><strong>Theme:</strong>
