--- a/sequence2a/index.html
+++ b/sequence2a/index.html
@@ -52,8 +52,8 @@ Have fun. The goal of the game is to corner your opponent.  A player wins if the
 </li>
 
 <li><strong>Gameplay:</strong>
-Each side will have 2 pieces, on a simple board. There is exactly 1 open position at any given time. Computer's pieces are purple and on top of board, player's are green and at bottom.  Player goes first.  Only 1 piece can be moved per turn. 
-<br>- If the dog is on the right side of the board, player's will not be able to move the right piece on the 1st move, since that would instantly make computer out of moves.  Similarly, if the dog is on the left side of the board, player's won't be able to move the left piece on the 1st move. 
+Each side will have 2 pieces, on a simple board. There is exactly 1 open position at any given time. Computer's pieces are purple, player's are green. At start, computer's pieces are on top of board and player's are at bottom.  Player goes first.  Only 1 piece can be moved per turn. 
+<br>- If the dog is on the right side of the board, player will not be able to move the right piece on the 1st move, since that would instantly make computer out of moves.  Similarly, if the dog is on the left side of the board, player's won't be able to move the left piece on the 1st move. 
 <br>- Chess pieces can be moved horizontally, vertically, or diagonally to the open position.
 Player starts with a time limit of 8 seconds to move.  Each successful move earns a point.  As the score goes up, the time limit will gradually goes down to 1 second. 
 <br>- The player loses when he/she is out of moves, or time is up before he/she can make a move.
